# RpiBtSerialComm

./: .autotools  .cproject  .gitignore  .gitmodules  autogen.sh  configure  configure.ac  doxyconfig  listAndSend
RpiBTSerialComm/: .autotools  .cproject  .gitignore  .project  AUTHORS  NEWS  README  autogen.sh  configure  configure.ac
RpiBTSerialComm/doc/html/: index.html
RpiBTSerialComm/src/: Constants.h  Makefile.am  Makefile.in  RpiBTSerialComm.c  bluetoothUtils.c
RpiBTSerialComm/src/Ttys/: ttys.h
RpiBTSerialComm/src/ttys/: ttys.c
dependencies/libnl-3.2.25/: config.status  libnl-route-3.0.pc  libtool
dependencies/libnl-3.2.25/install/lib/: libnl-3.la  libnl-3.so.200.20.0  libnl-cli-3.la  libnl-route-3.la  libnl-route-3.so.200
dependencies/libnl-3.2.25/install/sbin/: nl-class-add  nl-class-delete  nl-class-list  nl-link-list  nl-qdisc-delete  nl-qdisc-list
dependencies/libnl-3.2.25/lib/: libnl-3.la  libnl-nf-3.la  libnl-route-3.la
dependencies/libnl-3.2.25/lib/.libs/: libnl-genl-3.la  libnl-genl-3.lai  libnl-genl-3.so.200.20.0  libnl-idiag-3.la  libnl-idiag-3.lai  libnl-idiag-3.so.200  libnl-nf-3.lai  libnl-nf-3.so.200.20.0  libnl-route-3.so.200
dependencies/libnl-3.2.25/src/: genl-ctrl-list  idiag-socket-details  nf-ct-add  nf-ct-list  nf-exp-add  nf-exp-delete  nf-exp-list  nf-log  nf-monitor  nf-queue  nl-addr-add  nl-addr-delete  nl-addr-list  nl-class-add  nl-class-delete  nl-class-list  nl-classid-lookup  nl-cls-add  nl-cls-delete  nl-cls-list  nl-fib-lookup  nl-link-enslave  nl-link-ifindex2name  nl-link-list  nl-link-name2ifindex  nl-link-release  nl-link-set  nl-link-stats  nl-list-caches  nl-list-sockets  nl-monitor  nl-neigh-add  nl-neigh-delete  nl-neigh-list  nl-neightbl-list  nl-pktloc-lookup  nl-qdisc-add  nl-qdisc-delete  nl-qdisc-list  nl-route-add  (+6 more)
dependencies/libnl-3.2.25/src/.libs/: genl-ctrl-list  idiag-socket-details  nf-ct-add  nf-ct-list  nf-exp-add  nf-exp-delete  nf-exp-list  nf-log  nf-monitor  nf-queue  nl-addr-add  nl-addr-delete  nl-addr-list  nl-classid-lookup  nl-cls-add  nl-cls-delete  nl-cls-list  nl-fib-lookup  nl-link-enslave  (+21 more)
dependencies/wireless_tools.29/: Makefile  iwconfig  iwgetid  iwpriv
share/: Makefile.am  checkInterfaceStatus.sh  monitorNetworkConnection
src/: Makefile.am  RpiBTSerialComm.c  RpiBTSerialComm.h  bluetoothUtils.c  bluetoothUtils.h  communicationProtocol.c  communicationProtocol.h  constants.h
src/Network/: networkManagement.c  networkManagement.h  wifiTools.c  wifiTools.h
src/Ttys/: ttys.c
(+28 files in other folders)
